# insideOptWeeklyPuzzle

./: README.md
ambiguity-crops/: ambiguity-crops.py  pyproject.toml  readme.md
bridging-ml-with-or/: .gitignore  README.md  bridging_ml_with_OR.ipynb  pyproject.toml
bridging-ml-with-or/.ipynb_checkpoints/: bridging_ml_with_OR-checkpoint.ipynb
