[project]
name = "bridging-ml-with-or"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyomo>=6.9.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "statsmodels==0.14.5",
]
